--- a/ms_contact.yml
+++ b/ms_contact.yml
@@ -3,9 +3,9 @@ server:
 
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/healthcare_patients?createDatabaseIfNotExist=true
-    username: root
-    password: motdepasse123*
+    url: jdbc:postgresql://localhost:5432/ms_contact
+    username: postgres
+    password: motdepasse123
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
