--- a/ms_contact.yml
+++ b/ms_contact.yml
@@ -13,3 +13,9 @@ spring:
       defer-datasource-initialization: true 
     show-sql: true
 
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8070/eureka/
+  instance:
+    preferIpAddress: true
