--- a/ms_user.yml
+++ b/ms_user.yml
@@ -1,23 +1,21 @@
 server:
-  port: 8087
+  port: 8100
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/CRM_user?createDatabaseIfNotExist=true
-    username: root
-    password: motdepasse123*
+    url: jdbc:postgresql://localhost:5432/ms_user_crm
+    username: postgres
+    password: motdepasse123
+    driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
       defer-datasource-initialization: true 
     show-sql: true
-
-healthcare:
-  app:
-    jwtSecret: yourVerySecureJwtSecretKeyShouldBeLongAndHardToGuess
-    jwtExpirationMs: 86400000  # 24 heures
 
 eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8070/eureka/
+  instance:
+    preferIpAddress: true
