--- a/ms_contact.yml
+++ b/ms_contact.yml
@@ -9,7 +9,7 @@ spring:
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
       defer-datasource-initialization: true 
     show-sql: true
 
