--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -10,7 +10,7 @@ spring:
         - id: ms_user
           uri: http://localhost:8200
           predicates:
-            - Path=/user/**
+            - Path=/api/user/**
 
         - id: ms_contact
           uri: http://localhost:8100
