--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -1,57 +1,57 @@
-spring:
-  application:
-    name: api-gateway
-  config:
-    import: "optional:configserver:http://config-service:9000/"
-  cloud:
-    gateway:
-      routes:
-        - id: ms_user
-          uri: http://ms_user:8200
-          predicates:
-            - Path=/api/users/**
-
-        - id: ms_contact
-          uri: http://ms_contact:8100
-          predicates:
-            - Path=/api/contacts/**
-
-    discovery:
-      locator:
-        enabled: true
-        lower-case-service-id: true
-
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://eureka_server:8070/eureka/
-
-# server:
-#   port: 8080
-
 # spring:
 #   application:
 #     name: api-gateway
+#   config:
+#     import: "optional:configserver:http://config-service:9000/"
 #   cloud:
 #     gateway:
 #       routes:
 #         - id: ms_user
-#           uri: http://localhost:8200
+#           uri: http://ms_user:8200
 #           predicates:
 #             - Path=/api/users/**
 
 #         - id: ms_contact
-#           uri: http://localhost:8100
+#           uri: http://ms_contact:8100
 #           predicates:
 #             - Path=/api/contacts/**
 
 #     discovery:
 #       locator:
-#         enabled: true  # Pour activer la découverte via Eureka (optionnel)
+#         enabled: true
 #         lower-case-service-id: true
 
 # eureka:
 #   client:
 #     serviceUrl:
-#       defaultZone: http://localhost:8070/eureka/
+#       defaultZone: http://eureka_server:8070/eureka/
+
+server:
+  port: 8080
+
+spring:
+  application:
+    name: api-gateway
+  cloud:
+    gateway:
+      routes:
+        - id: ms_user
+          uri: http://localhost:8200
+          predicates:
+            - Path=/api/users/**
+
+        - id: ms_contact
+          uri: http://localhost:8100
+          predicates:
+            - Path=/api/contacts/**
+
+    discovery:
+      locator:
+        enabled: true  # Pour activer la découverte via Eureka (optionnel)
+        lower-case-service-id: true
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8070/eureka/
 
