--- a/ms_contact.yml
+++ b/ms_contact.yml
@@ -1,21 +1,21 @@
-server:
-  port: 8100
+# server:
+#   port: 8100
 
-spring:
-  datasource:
-    url: jdbc:postgresql://localhost:5432/ms_contact
-    username: postgres
-    password: motdepasse123
-    driver-class-name: org.postgresql.Driver
-  jpa:
-    hibernate:
-      ddl-auto: create-drop
-      defer-datasource-initialization: true 
-    show-sql: true
+# spring:
+#   datasource:
+#     url: jdbc:postgresql://localhost:5432/ms_contact
+#     username: postgres
+#     password: motdepasse123
+#     driver-class-name: org.postgresql.Driver
+#   jpa:
+#     hibernate:
+#       ddl-auto: create-drop
+#       defer-datasource-initialization: true 
+#     show-sql: true
 
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:8070/eureka/
-  instance:
-    preferIpAddress: true
+# eureka:
+#   client:
+#     serviceUrl:
+#       defaultZone: http://localhost:8070/eureka/
+#   instance:
+#     preferIpAddress: true
