Comment out eureka and management configurations

--- a/eureka_server.yml
+++ b/eureka_server.yml
@@ -18,24 +18,24 @@
 
 
 
-eureka:
-  instance:
-    hostname: localhost
-  client:
-    register-with-eureka: false
-    fetch-registry: false
-    service-url:
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
-server:
-  port: 8070
+# eureka:
+#   instance:
+#     hostname: localhost
+#   client:
+#     register-with-eureka: false
+#     fetch-registry: false
+#     service-url:
+#       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+# server:
+#   port: 8070
 
-# Will be used into docker-compose to pass the healtcheck step
-management:
-  endpoints:
-    web:
-      exposure:
-        include: "*"  # Expose tous les endpoints
-  endpoint:
-    health:
-      probes:
-        enabled: true
+# # Will be used into docker-compose to pass the healtcheck step
+# management:
+#   endpoints:
+#     web:
+#       exposure:
+#         include: "*"  # Expose tous les endpoints
+#   endpoint:
+#     health:
+#       probes:
+#         enabled: true
