--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -26,32 +26,32 @@
 #     serviceUrl:
 #       defaultZone: http://eureka_server:8070/eureka/
 
-server:
-  port: 8080
+# server:
+#   port: 8080
 
-spring:
-  application:
-    name: api-gateway
-  cloud:
-    gateway:
-      routes:
-        - id: ms_user
-          uri: http://localhost:8200
-          predicates:
-            - Path=/api/users/**
+# spring:
+#   application:
+#     name: api-gateway
+#   cloud:
+#     gateway:
+#       routes:
+#         - id: ms_user
+#           uri: http://localhost:8200
+#           predicates:
+#             - Path=/api/users/**
 
-        - id: ms_contact
-          uri: http://localhost:8100
-          predicates:
-            - Path=/api/contacts/**
+#         - id: ms_contact
+#           uri: http://localhost:8100
+#           predicates:
+#             - Path=/api/contacts/**
 
-    discovery:
-      locator:
-        enabled: true  # Pour activer la découverte via Eureka (optionnel)
-        lower-case-service-id: true
+#     discovery:
+#       locator:
+#         enabled: true  # Pour activer la découverte via Eureka (optionnel)
+#         lower-case-service-id: true
 
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:8070/eureka/
+# eureka:
+#   client:
+#     serviceUrl:
+#       defaultZone: http://localhost:8070/eureka/
 
